# timekpr-webui

./: .env.example  .gitignore  AGENTS.md  AI-USAGE.md  Dockerfile  README.md  app.py  config.json  docker-compose.yaml  latest  mkdocs.yml  pyrightconfig.json  requirements-docs.txt  requirements.txt  versions.json
.github/workflows/: docs.yml  extension.yml  i18n-check.yml  rust-agent.yml  server-image.yml
agent/: Cargo.toml  config.json  config.json.example  guardian-agent.wxs  timekpr-agent.wxs
agent/keys/: update-signing.pub
agent/overlay_resources/: blockedv2.html
agent/resources/i18n/: en.json  manifest.json
agent/src/: apparmor.rs  approval_deduper.rs  approval_policy.rs  audit_monitor.rs  clock_integrity.rs  clock_integrity_monitor.rs  domain_notify.rs  domain_policy.rs  extension_policy.rs  firewall.rs  i18n.rs  installed_apps.rs  ipc.rs  lib.rs  local_dns.rs  main.rs  netlink.rs  overlay.rs  overlay_helper_main.rs  reporting_filter.rs  screenshot.rs  terminal_monitor.rs  timekpr_dbus.rs  update_verify.rs
agent/src/bios_management/: baseline.rs  compliance.rs  mod.rs  password.rs
agent/src/bios_management/linux/: mod.rs  oem_detect.rs  sysfs.rs
agent/src/bios_management/windows/: mod.rs  oem_detect.rs
agent/src/linux_device_policy/: bluetooth.rs  exec.rs  mod.rs  polkit.rs  session.rs
agent/src/overlay_cef/: agent_ipc.rs  mod.rs
agent/src/testdata/: signed-release.tar.gz.minisig
agent/src/windows_service/: bcd_integrity.rs  boot_mode.rs  clock_integrity_monitor.rs  dns_proxy.rs  ipc.rs  laps.rs  mod.rs  overlay.rs  policy.rs  process_monitor.rs  safe_mode_lockdown.rs  safeboot_registry.rs  tamper_state.rs
agent/src/windows_user_agent/: mod.rs
android-agent/: README.md  gradlew  settings.gradle.kts
android-agent/app/: build.gradle.kts  google-services.json  google-services.json.example
dev/: 404.html  index.html  sitemap.xml
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: README.md  android-agent.md  app-discovery.md  index.md  linux-agent.md
docs/development/: ci-release.md  contributing.md  local-dev.md
docs/features/: alerts-and-webhooks.md  browser-restrictions.md  device-restrictions.md  guardian-overlay.md  hardware-baseline.md  policy-presets.md  registration-approvals.md  screenshots.md  web-video-history.md  youtube-history.md
docs/getting-started/: comparison.md  configuration.md  overview.md  security.md  server-deployment.md
docs/reference/: auth-and-oidc.md  background-worker.md  policy-matrix.md  rest-api.md  websocket-protocol.md
docs/troubleshooting/: index.md
docs/web-ui/: access-requests.md  app-policies.md  child-accounts-and-mappings.md  dashboard.md  device-management.md  install-pwa.md  schedules-and-limits.md  settings.md  web-filters.md
docs/workflows/: cloud-console-setup.md  pairing-and-approval.md  policy-assignment.md  unenroll-and-factory-reset.md
extension/: background.js  blocked.html  blocked.js  blockedv2.html  content.js  i18n.js  manifest.json  search.html  tiktok_monitor.js  tiktok_utils.js  youtube_utils.js
i18n/: README.md
i18n/en/: agent.yaml  extension.yaml  server.yaml
scripts/: android-debug-prepare.sh  android-logcat.sh  android-native-build.sh  android-signature-checksum.sh  inspect-ai-mode-button.js  install-agent.sh  package-extension.py  setup-cross-apt.py  setup-dev.sh  test-sge-hiding.js  test-tiktok-utils.js  test-youtube-utils.js
scripts/ci/: release_plan.py
scripts/i18n/: check_usage.py  guardian-i18n  lib.py  manage.py
server/: .dockerignore  .pylintrc  Dockerfile  app.py  debug_agent.py  migrate_passwords.py  requirements.txt  reset_db.py  scratch_test_axml.py  seed_dev_data.py  setup.py  task_worker.py
server/migrations/: env.py
server/src/: agent_helper.py  agent_push.py  alerts_manager.py  (+34 more)
templates/: admin.html  dashboard.html
v0.55/: 404.html  index.html  sitemap.xml
v0.56/: 404.html  index.html  sitemap.xml
v0.56.1/: 404.html  index.html  sitemap.xml
v0.56.2/: 404.html  index.html  sitemap.xml
v0.67.10/: 404.html  index.html  sitemap.xml
v0.67.5/: 404.html  index.html  sitemap.xml
v0.67.8/: 404.html  index.html  sitemap.xml
v0.67.9/: 404.html  index.html  sitemap.xml
v0.68.0/: 404.html  index.html  sitemap.xml
v0.68.1/: 404.html  index.html  sitemap.xml
v0.68.2/: 404.html  index.html  sitemap.xml
v0.68.3/: 404.html  index.html  sitemap.xml
v0.68.4/: 404.html  index.html  sitemap.xml
v0.69.1/: 404.html  index.html  sitemap.xml
v0.69.2/: 404.html  index.html  sitemap.xml
v0.69.3/: 404.html  index.html  sitemap.xml
v0.69.4/: 404.html  index.html  sitemap.xml
v0.69.5/: 404.html  index.html  sitemap.xml
v0.69.6/: 404.html  index.html  sitemap.xml
(+1263 files in other folders)
