[package]
name = "timekpr-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
chrono = "0.4.44"
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }
logind-zbus = "5.3.2"
users = "0.11"
hickory-proto = "0.26.1"
libc = "0.2"
