[package]
name = "timekpr-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
chrono = "0.4.44"
hickory-proto = "0.26.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots"] }
flate2 = "1.0"
tar = "0.4"
base64 = "0.22"
minisign-verify = "0.2.5"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }
logind-zbus = "5.3.2"
users = "0.11"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Etw",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_ActiveDirectory",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_System_RemoteDesktop"
] }
windows-service = "0.6.0"
